projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/getattr_rejects_int_name_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "getattr_rejects_int_name_argument"
# subject = "getattr"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""getattr: getattr_rejects_int_name_argument (errors)."""
try:
    result = getattr(1, 2)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
